[package]
name = "pngme"
version = "0.1.0"
authors = ["Corey Dexter <coreyjdexter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_pngme"
path = "src/lib.rs"

[[bin]]
name = "pngme"
path = "src/app/pngme_main.rs"

[dependencies]
structopt = "0.3.21"
